--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>feedback-grove</title>
-    <meta name="description" content="GPT Engineer Generated Project" />
-    <meta name="author" content="GPT Engineer" />
-    <meta property="og:image" content="/og-image.svg" />
+    <title> Ad Web Comic Agency Feedback</title>
+    <meta name="description" content="Feedback" />
+    <meta name="author" content="Feedback" />
+    <meta property="og:image" content="....." />
   </head>
   <body>
     <div id="root"></div>
